[tool.poetry]
name = "data-analytics-ceplan-poi"
version = "0.1.0"
description = ""
authors = ["Eber <laurente.eber@outlook.com>"]
readme = "README.md"
packages = [{include = "data_analytics_ceplan_poi"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
